--- a/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.html
@@ -11,16 +11,16 @@
         </div>
       </mat-card>
 
-      <mat-card class="tool-card" (click)="navigateCronograma()">
+      <!-- <mat-card class="tool-card" (click)="navigateCronograma()">
         <div class="tool-icon">
           <img src="/assets/img/svg/calendar.svg" alt="Cronograma">
         </div>
         <div class="tool-content">
           <h3>Cronograma</h3>
         </div>
-      </mat-card>
+      </mat-card> -->
 
-      <mat-card class="tool-card" (click)="navigateEstatisticas()">
+      <mat-card *ngIf="isAdmin()" class="tool-card" (click)="navigateEstatisticas()">
         <div class="tool-icon">
           <img src="/assets/img/svg/estatisticas.svg" alt="Estatísticas">
         </div>
