--- a/frontend-cemos/src/app/modules/app3-planejamento-militar/app3-planejamento-militar-bibliografia/app3-planejamento-militar-bibliografia.html
+++ b/frontend-cemos/src/app/modules/app3-planejamento-militar/app3-planejamento-militar-bibliografia/app3-planejamento-militar-bibliografia.html
@@ -11,5 +11,7 @@
   [basePath]="basePath"
   [conceitosPath]="conceitosPath"
   [flashcardsPath]="flashcardsPath"
-  [perguntasPath]="perguntasPath">
+  [perguntasPath]="perguntasPath"
+  [simuladosPath]="simuladosPath"
+  [checkAbandonoPath]="checkAbandonoPath">
 </app-capa-bibliografia>
