--- a/frontend-cemos/src/app/modules/app4-historia/app4-historia-bibliografia/app4-historia-bibliografia.html
+++ b/frontend-cemos/src/app/modules/app4-historia/app4-historia-bibliografia/app4-historia-bibliografia.html
@@ -9,5 +9,7 @@
   [basePath]="basePath"
   [conceitosPath]="conceitosPath"
   [flashcardsPath]="flashcardsPath"
-  [perguntasPath]="perguntasPath">  
+  [perguntasPath]="perguntasPath"
+  [simuladosPath]="simuladosPath"
+  [checkAbandonoPath]="checkAbandonoPath">  
 </app-capa-bibliografia>
