--- a/frontend-cemos/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
+++ b/frontend-cemos/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
@@ -11,5 +11,7 @@
   [basePath]="basePath"
   [conceitosPath]="conceitosPath"
   [flashcardsPath]="flashcardsPath"
-  [perguntasPath]="perguntasPath">
+  [perguntasPath]="perguntasPath"
+  [simuladosPath]="simuladosPath"
+  [checkAbandonoPath]="checkAbandonoPath">
 </app-capa-bibliografia>
