--- a/frontend-cemos/src/app/modules/app8-direito/app8-direito-bibliografia/app8-direito-bibliografia.html
+++ b/frontend-cemos/src/app/modules/app8-direito/app8-direito-bibliografia/app8-direito-bibliografia.html
@@ -10,5 +10,7 @@
   [markdownPath]="markdownPath"
   [basePath]="basePath"
   [flashcardsPath]="flashcardsPath"
-  [perguntasPath]="perguntasPath">
+  [perguntasPath]="perguntasPath"
+  [simuladosPath]="simuladosPath"
+  [checkAbandonoPath]="checkAbandonoPath">
 </app-capa-bibliografia>
