--- a/frontend-cemos/src/app/components/capa-bibliografia/capa-bibliografia.html
+++ b/frontend-cemos/src/app/components/capa-bibliografia/capa-bibliografia.html
@@ -14,7 +14,7 @@
       <button mat-stroked-button color="primary" (click)="navigateHome()" aria-label="Voltar para Home">
         <span class="button-content">
           <mat-icon class="button-icon">arrow_back</mat-icon>
-          <span class="button-text">Voltar à Página Principal</span>
+          <span class="button-text">Voltar</span>
         </span>
       </button>
       <button mat-stroked-button (click)="navigateTo(conceitosPath)" *ngIf="conceitosPath">
