--- a/frontend-cemos/src/app/components/simulados/simulados.html
+++ b/frontend-cemos/src/app/components/simulados/simulados.html
@@ -53,7 +53,7 @@
         (click)="goToBibliografia()"
       >
         <span class="back-arrow"></span>
-        Voltar à Bibliografia
+        Voltar
       </button>
     </div>
   </div>
