--- a/frontend-audita/src/app/components/flash-cards/flash-cards.html
+++ b/frontend-audita/src/app/components/flash-cards/flash-cards.html
@@ -85,7 +85,7 @@
         class="btn btn-back"
         (click)="goToBibliografia()">
         <span class="back-arrow"></span>
-        Voltar à Bibliografia
+        Voltar
       </button>
     </div>
   </div>
