--- a/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.html
+++ b/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.html
@@ -75,10 +75,10 @@
     <mat-card class="module-card" (click)="navigateTo(['app6-geopolitica-relacoes-internacionais', 'bibliografia'])">
       <mat-card-header>
         <mat-icon class="module-icon">public</mat-icon>
-        <mat-card-title>Geopolítica e RI</mat-card-title>
+        <mat-card-title>Geopolítica</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p><strong>KAPLAN</strong>, A Vingança da Geografia.<br><strong>MATTOS</strong>, Geopolítica e Modernidade.<br><strong>VESENTINI</strong>, Novas Geopolíticas.<br><strong>MINGST</strong>, Relações Internacionais</p>
+        <p><strong>KAPLAN</strong>, A Vingança da Geografia.<br><strong>MATTOS</strong>, Geopolítica e Modernidade.<br><strong>VESENTINI</strong>, Novas Geopolíticas.<br></p>
       </mat-card-content>
     </mat-card>
 
