--- a/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.scss
+++ b/frontend-cemos/src/app/pages/home/home-landing/home-landing.component.scss
@@ -181,16 +181,16 @@
       background: linear-gradient(135deg, #43e97b 0%, #001a15 100%);
     }
     &:nth-child(5) mat-card-header {
-      background: linear-gradient(135deg, #fa709a 0%, #3a3200 100%);
+      background: linear-gradient(135deg, #ff0000 0%, #3a3200 100%);
     }
     &:nth-child(6) mat-card-header {
-      background: linear-gradient(135deg, #30cfd0 0%, #330867 100%);
+      background: linear-gradient(135deg, #e6f72b 0%, #353501 100%);
     }
     &:nth-child(7) mat-card-header {
       background: linear-gradient(135deg, #a8edea 0%, #360011 100%);
     }
     &:nth-child(8) mat-card-header {
-      background: linear-gradient(135deg, #ff9a9e 0%, #320022 100%);
+      background: linear-gradient(135deg, #ff7b00 0%, #320022 100%);
     }
     &:nth-child(9) mat-card-header {
       background: linear-gradient(135deg, #ffecd2 0%, #4b1300 100%);
