--- a/frontend-cemos/src/app/components/perguntas/perguntas.html
+++ b/frontend-cemos/src/app/components/perguntas/perguntas.html
@@ -261,7 +261,7 @@
               (change)="onToggleCaiuEmProva(question, $event.target.checked)"
               [disabled]="isTogglingCaiuEmProva(question)"
             />
-            Caiu em prova
+            Caveira
           </label>
           <span class="toggle-status" *ngIf="isTogglingCaiuEmProva(question)">Atualizando...</span>
         </div>
